# Argonaut

./: LICENSE  README.md  main.py  pyproject.toml
argonaut/: __init__.py  __init__.pyi  arguments.py  arguments.pyi  commands.py  commands.pyi  faults.py  faults.pyi  internals.py  internals.pyi  null.py  null.pyi  triggers.py  triggers.pyi  utils.py  utils.pyi  void.py
test/: arguments.py  commands.py  null.py
