[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argonaut"
# Pull version from argonaut.__version__
dynamic = ["version"]
description = "A small library for building CLI apps with decorator- or iterable-defined commands."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Eiko Reishin (影皇嶺臣)" }
]
keywords = ["cli", "commands", "arguments", "rich", "decorators"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

dependencies = [
  "rich>=14.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/argonaut"
Repository = "https://github.com/your-org/argonaut"
Issues = "https://github.com/your-org/argonaut/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["argonaut*"]

[tool.setuptools.dynamic]
version = { attr = "argonaut.__version__" }

[tool.setuptools.package-data]
# Include PEP 561 type stubs
"argonaut" = ["**/*.pyi"]
